--- a/src/style.css
+++ b/src/style.css
@@ -18,3 +18,10 @@ body
     left: 0;
     outline: none;
 }
+
+a {
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  z-index: -2;
+  color: rgb(185, 184, 184);
+  font-size: 20;
+}
