--- a/src/style.css
+++ b/src/style.css
@@ -25,3 +25,13 @@ a {
   color: rgb(185, 184, 184);
   font-size: 20;
 }
+
+#info {
+	position: absolute;
+	top: 10px;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+	display:block;
+  color: white;
+}
